Refactor/cleanup presentation automation API

--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -132,6 +132,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CommonVersionInfo\CommonVersionInfo.csproj" />
+    <ProjectReference Include="..\IntegratedPresenterAPIInterop\IntegratedPresenterAPIInterop.csproj" />
     <ProjectReference Include="..\SwitcherControl\SwitcherControl.csproj" />
   </ItemGroup>
 
