--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Coypright.lib.json" />
     <None Remove="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\ShapeAndTextLayoutInfo_Default.json" />
+    <None Remove="LayoutInfo\Defaults\ShapeImageAndTextLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\StitchedImageSlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\TitledLiturgyVerseSlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\UpNextLayoutInfo_Default.json" />
@@ -17,7 +19,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.Coypright.lib.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LayoutInfo\Defaults\ShapeImageAndTextLayoutInfo_Default.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="LayoutInfo\Defaults\StitchedImageSlideLayoutInfo_Default.json">
