--- a/SlideCreater/SlideCreater.csproj
+++ b/SlideCreater/SlideCreater.csproj
@@ -11,25 +11,37 @@
   <ItemGroup>
     <None Remove="version.json" />
     <None Remove="ViewControls\Images\Artist.png" />
+    <None Remove="ViewControls\Images\ArtistBlue.png" />
+    <None Remove="ViewControls\Images\ArtistWhite.png" />
+    <None Remove="ViewControls\Images\BoxOrange.png" />
+    <None Remove="ViewControls\Images\BoxShutOrange.png" />
     <None Remove="ViewControls\Images\Cardio.png" />
     <None Remove="ViewControls\Images\CloudDL.png" />
     <None Remove="ViewControls\Images\Delete.png" />
+    <None Remove="ViewControls\Images\DeleteWhite.png" />
     <None Remove="ViewControls\Images\DrawLayout.png" />
     <None Remove="ViewControls\Images\Export.png" />
     <None Remove="ViewControls\Images\Export2.png" />
+    <None Remove="ViewControls\Images\ExportWhite.png" />
     <None Remove="ViewControls\Images\File.png" />
     <None Remove="ViewControls\Images\Folder.png" />
+    <None Remove="ViewControls\Images\FolderGold.png" />
     <None Remove="ViewControls\Images\Folder_light.png" />
     <None Remove="ViewControls\Images\musicnote.png" />
+    <None Remove="ViewControls\Images\NewGreen.png" />
+    <None Remove="ViewControls\Images\OpenFolderWhite.png" />
     <None Remove="ViewControls\Images\PaintBrush.png" />
+    <None Remove="ViewControls\Images\PaintWhite.png" />
     <None Remove="ViewControls\Images\Pencil.png" />
     <None Remove="ViewControls\Images\PenScribble.png" />
     <None Remove="ViewControls\Images\Plus.png" />
+    <None Remove="ViewControls\Images\PlusWhite.png" />
     <None Remove="ViewControls\Images\Question.png" />
     <None Remove="ViewControls\Images\RenderPaintCan.png" />
     <None Remove="ViewControls\Images\RoundAdd.png" />
     <None Remove="ViewControls\Images\Save.png" />
     <None Remove="ViewControls\Images\Trash.png" />
+    <None Remove="ViewControls\Images\TrashRed.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -49,6 +61,29 @@
     <EmbeddedResource Include="version.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <Resource Include="ViewControls\Images\ArtistBlue.png" />
+    <Resource Include="ViewControls\Images\ArtistWhite.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="ViewControls\Images\BoxOrange.png" />
+    <Resource Include="ViewControls\Images\BoxShutOrange.png" />
+    <Resource Include="ViewControls\Images\DeleteWhite.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="ViewControls\Images\ExportWhite.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="ViewControls\Images\FolderGold.png" />
+    <Resource Include="ViewControls\Images\NewGreen.png" />
+    <Resource Include="ViewControls\Images\OpenFolderWhite.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="ViewControls\Images\PaintWhite.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="ViewControls\Images\PlusWhite.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
@@ -112,6 +147,7 @@
     <Resource Include="ViewControls\Images\Trash.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="ViewControls\Images\TrashRed.png" />
   </ItemGroup>
 
   <ItemGroup>
