--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="FontManagement\Fonts\lib\arial.ttf" />
+    <None Remove="FontManagement\Fonts\lib\arialbd.ttf" />
+    <None Remove="FontManagement\Fonts\lib\arialbi.ttf" />
+    <None Remove="FontManagement\Fonts\lib\ariali.ttf" />
+    <None Remove="FontManagement\Fonts\lib\ARIALN.TTF" />
+    <None Remove="FontManagement\Fonts\lib\ARIALNB.TTF" />
+    <None Remove="FontManagement\Fonts\lib\ARIALNBI.TTF" />
+    <None Remove="FontManagement\Fonts\lib\ARIALNI.TTF" />
+    <None Remove="FontManagement\Fonts\lib\ariblk.ttf" />
+    <None Remove="FontManagement\Fonts\lib\LSBSymbol.ttf" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.CopyTitle.lib.json" />
     <None Remove="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\ShapeAndTextLayoutInfo_Default.json" />
@@ -21,6 +31,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="FontManagement\Fonts\lib\arial.ttf" />
+    <EmbeddedResource Include="FontManagement\Fonts\lib\arialbd.ttf" />
+    <EmbeddedResource Include="FontManagement\Fonts\lib\arialbi.ttf" />
+    <EmbeddedResource Include="FontManagement\Fonts\lib\ariali.ttf" />
+    <EmbeddedResource Include="FontManagement\Fonts\lib\ARIALN.TTF" />
+    <EmbeddedResource Include="FontManagement\Fonts\lib\ARIALNB.TTF" />
+    <EmbeddedResource Include="FontManagement\Fonts\lib\ARIALNBI.TTF" />
+    <EmbeddedResource Include="FontManagement\Fonts\lib\ARIALNI.TTF" />
+    <EmbeddedResource Include="FontManagement\Fonts\lib\ariblk.ttf" />
+    <EmbeddedResource Include="FontManagement\Fonts\lib\LSBSymbol.ttf" />
     <EmbeddedResource Include="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -58,7 +78,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="SixLabors.Fonts" Version="1.0.0-beta16" />
     <PackageReference Include="SixLabors.ImageSharp" Version="2.0.0" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta14" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     <PackageReference Include="System.Text.Json" Version="6.0.0" />
   </ItemGroup>
