--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -18,8 +18,11 @@
     <None Remove="FontManagement\Fonts\lib\ariblk.ttf" />
     <None Remove="FontManagement\Fonts\lib\LSBSymbol.ttf" />
     <None Remove="LayoutInfo\Defaults\AnthemTitleLayoutInfo_Default.json" />
-    <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.CopyTitle.lib.json" />
+    <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Green.lib.json" />
+    <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
+    <None Remove="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json" />
+    <None Remove="LayoutInfo\Defaults\SermonLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\ShapeAndTextLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\ShapeImageAndTextLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\StitchedImageSlideLayoutInfo_Default.json" />
@@ -42,6 +45,14 @@
     <EmbeddedResource Include="FontManagement\Fonts\lib\ARIALNI.TTF" />
     <EmbeddedResource Include="FontManagement\Fonts\lib\ariblk.ttf" />
     <EmbeddedResource Include="FontManagement\Fonts\lib\LSBSymbol.ttf" />
+    <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.Green.lib.json" />
+    <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
+    <EmbeddedResource Include="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LayoutInfo\Defaults\SermonLayoutInfo_Default.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -75,7 +86,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.CopyTitle.lib.json" />
     <Resource Include="Resources\LSBSymbol.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
