Convert 2title to underlying shapeandtext. Deprecates horizontal/vertical (defaults to horizontal always)

--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -30,6 +30,7 @@
     <None Remove="LayoutInfo\Defaults\TitledLiturgyVerseSlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\TitledResponsiveLiturgySlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\UpNextLayoutInfo_Default.json" />
+    <None Remove="LayoutInfo\Defaults\_2TitleLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\_2TitleSlideLayoutInfo_Default.json" />
     <None Remove="Resources\LSBSymbol.ttf" />
   </ItemGroup>
@@ -78,6 +79,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="LayoutInfo\Defaults\UpNextLayoutInfo_Default.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LayoutInfo\Defaults\_2TitleLayoutInfo_Default.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="LayoutInfo\Defaults\_2TitleSlideLayoutInfo_Default.json">
