Rely exculsively on Projcets internal assets. This should fix issues with duplicate assets, not having assets etc.

--- a/SlideCreater/SlideCreater.csproj
+++ b/SlideCreater/SlideCreater.csproj
@@ -178,4 +178,6 @@
     <PackageReference Update="chromiumembeddedframework.runtime.win-x64" Version="96.0.14" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties version_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
