--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -140,4 +140,6 @@
     <ProjectReference Include="..\SwitcherControl\SwitcherControl.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties version_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
