--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -24,6 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="BClassPIP.png" />
+    <None Remove="BMDSwitcher\Mock\Images\backcam.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\black.png" />
     <None Remove="BMDSwitcher\Mock\Images\cbars.png" />
     <None Remove="BMDSwitcher\Mock\Images\centercam.PNG" />
@@ -34,16 +36,26 @@
     <None Remove="BMDSwitcher\Mock\Images\leftshot1.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\organcam.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\organshot.PNG" />
+    <None Remove="BMDSwitcher\Mock\Images\powerpoint.png" />
     <None Remove="BMDSwitcher\Mock\Images\rightcam.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\rightshot.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\videofile.png" />
+    <None Remove="HymnPIP.png" />
+    <None Remove="Icons\BClassPIP.png" />
+    <None Remove="Icons\HymnPIP.png" />
     <None Remove="Icons\keyframepushleft.png" />
     <None Remove="Icons\keyframepushright.png" />
     <None Remove="Icons\keyframetobox.png" />
     <None Remove="Icons\keyframetofill.png" />
+    <None Remove="Icons\LeftSplitPIP.png" />
     <None Remove="Icons\Mute2.png" />
+    <None Remove="Icons\RightPIP.png" />
+    <None Remove="Icons\RightSplitPIP.png" />
     <None Remove="Keys\WhiteKey.png" />
+    <None Remove="LeftSplitPIP.png" />
     <None Remove="Log4Net.config" />
+    <None Remove="RightPIP.png" />
+    <None Remove="RightSplitPIP.png" />
     <None Remove="version.json" />
   </ItemGroup>
 
@@ -66,6 +78,8 @@
     <EmbeddedResource Include="Log4Net.config">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
+    <Resource Include="BClassPIP.png" />
+    <Resource Include="BMDSwitcher\Mock\Images\backcam.PNG" />
     <Resource Include="BMDSwitcher\Mock\Images\black.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -96,6 +110,7 @@
     <Resource Include="BMDSwitcher\Mock\Images\organshot.PNG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="BMDSwitcher\Mock\Images\powerpoint.png" />
     <Resource Include="BMDSwitcher\Mock\Images\rightcam.PNG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -103,6 +118,13 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="BMDSwitcher\Mock\Images\videofile.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="HymnPIP.png" />
+    <Resource Include="Icons\BClassPIP.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\HymnPIP.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Icons\keyframepushleft.png">
@@ -117,12 +139,24 @@
     <Resource Include="Icons\keyframetofill.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Icons\LeftSplitPIP.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Icons\Mute2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\RightPIP.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\RightSplitPIP.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Keys\WhiteKey.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="LeftSplitPIP.png" />
+    <Resource Include="RightPIP.png" />
+    <Resource Include="RightSplitPIP.png" />
     <EmbeddedResource Include="version.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
