more UI on each action

--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -42,6 +42,8 @@
     <None Remove="BMDSwitcher\Mock\Images\videofile.png" />
     <None Remove="HymnPIP.png" />
     <None Remove="Icons\BClassPIP.png" />
+    <None Remove="Icons\BlueBefore.png" />
+    <None Remove="Icons\GreenCheck.png" />
     <None Remove="Icons\HymnPIP.png" />
     <None Remove="Icons\keyframepushleft.png" />
     <None Remove="Icons\keyframepushright.png" />
@@ -49,8 +51,10 @@
     <None Remove="Icons\keyframetofill.png" />
     <None Remove="Icons\LeftSplitPIP.png" />
     <None Remove="Icons\Mute2.png" />
+    <None Remove="Icons\OrangeSandTimer.png" />
     <None Remove="Icons\RightPIP.png" />
     <None Remove="Icons\RightSplitPIP.png" />
+    <None Remove="Icons\YellowWarn.png" />
     <None Remove="Keys\WhiteKey.png" />
     <None Remove="LeftSplitPIP.png" />
     <None Remove="Log4Net.config" />
@@ -124,6 +128,12 @@
     <Resource Include="Icons\BClassPIP.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Icons\BlueBefore.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\GreenCheck.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Icons\HymnPIP.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -145,10 +155,16 @@
     <Resource Include="Icons\Mute2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Icons\OrangeSandTimer.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Icons\RightPIP.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Icons\RightSplitPIP.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\YellowWarn.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Keys\WhiteKey.png">
