UseUpNext option will try to create upnext with only title if no number provided

--- a/LutheRun/LutheRun.csproj
+++ b/LutheRun/LutheRun.csproj
@@ -6,10 +6,17 @@
 
   <ItemGroup>
     <None Remove="PrefabBlobs\ApostlesCreed.txt" />
+    <None Remove="PrefabBlobs\CopyTitle.txt" />
     <None Remove="PrefabBlobs\LordsPrayer.txt" />
     <None Remove="PrefabBlobs\NiceneCreed.txt" />
     <None Remove="PrefabBlobs\PrePIPScriptBlock_Creed.txt" />
     <None Remove="PrefabBlobs\PrePIPScriptBlock_Hymn.txt" />
+    <None Remove="PrefabBlobs\UpNext_Numbered.txt" />
+    <None Remove="PrefabBlobs\UpNext_UnNumbered.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="PrefabBlobs\CopyTitle.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +28,8 @@
     <EmbeddedResource Include="PrefabBlobs\LordsPrayer.txt" />
     <EmbeddedResource Include="PrefabBlobs\NiceneCreed.txt" />
     <EmbeddedResource Include="PrefabBlobs\PrePIPScriptBlock_Hymn.txt" />
+    <EmbeddedResource Include="PrefabBlobs\UpNext_Numbered.txt" />
+    <EmbeddedResource Include="PrefabBlobs\UpNext_UnNumbered.txt" />
   </ItemGroup>
 
   <ItemGroup>
