--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -20,6 +20,7 @@
     <None Remove="LayoutInfo\Defaults\AdvancedImagesSlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\AnthemTitleLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Green.lib.json" />
+    <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Hymns.lib.json" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
     <None Remove="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json" />
@@ -90,6 +91,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.Hymns.lib.json" />
     <Resource Include="Resources\LSBSymbol.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
