--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -22,6 +22,7 @@
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Green.lib.json" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Hymns.lib.json" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
+    <None Remove="LayoutInfo\Defaults\NewLibBundles\Xenon.CommonColored.lib.json" />
     <None Remove="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\ResponsiveLiturgySlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\SermonLayoutInfo_Default.json" />
@@ -49,6 +50,7 @@
     <EmbeddedResource Include="FontManagement\Fonts\lib\LSBSymbol.ttf" />
     <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.Green.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
+    <EmbeddedResource Include="LayoutInfo\Defaults\NewLibBundles\Xenon.CommonColored.lib.json" />
     <EmbeddedResource Include="LayoutInfo\Defaults\ReadingLayoutInfo_Default.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
