--- a/UIControls/UIControls.csproj
+++ b/UIControls/UIControls.csproj
@@ -52,4 +52,10 @@
     <ProjectReference Include="..\Xenon\Xenon.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Page Update="LibraryMacrosTreeItem.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+  </ItemGroup>
+
 </Project>
