--- a/IntegratedPresenter/Log4Net.config
+++ b/IntegratedPresenter/Log4Net.config
@@ -1,56 +1,74 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-  </configSections>
-  <log4net>
-    <appender name="MainLogger" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs.txt"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="1MB" />
-      <staticLogFileName value="true" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
-      </layout>
-    </appender>
-    <appender name="UserLogger" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs_user.txt"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="1MB" />
-      <staticLogFileName value="true" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
-      </layout>
-    </appender>
-    <appender name="SwitcherLogger" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs_switcher.txt"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="1MB" />
-      <staticLogFileName value="true" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
-      </layout>
-    </appender>
-    <root>
-      <level value="ALL" />
-      <appender-ref ref="MainLogger" />
-    </root>
-    <logger addititvity="false" name="UserLogger">
-      <level value="ALL"/>
-      <appender-ref ref="UserLogger"/>
-    </logger>
-    <logger addititvity="false" name="SwitcherLogger">
-      <level value="ALL"/>
-      <appender-ref ref="SwitcherLogger"/>
-    </logger>
-  </log4net>
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+	</configSections>
+	<log4net>
+		<appender name="MainLogger" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs.txt"/>
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="1MB" />
+			<staticLogFileName value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+			</layout>
+		</appender>
+		<appender name="UserLogger" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs_user.txt"/>
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="1MB" />
+			<staticLogFileName value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+			</layout>
+		</appender>
+		<appender name="SwitcherLogger" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs_switcher.txt"/>
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="1MB" />
+			<staticLogFileName value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+			</layout>
+		</appender>
+		<appender name="PilotLogger" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs_pilot.txt"/>
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="1MB" />
+			<staticLogFileName value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+			</layout>
+		</appender>
+
+		<root>
+			<level value="ALL" />
+			<appender-ref ref="MainLogger" />
+		</root>
+		<logger addititvity="false" name="UserLogger">
+			<level value="ALL"/>
+			<appender-ref ref="UserLogger"/>
+		</logger>
+		<logger addititvity="false" name="SwitcherLogger">
+			<level value="ALL"/>
+			<appender-ref ref="SwitcherLogger"/>
+		</logger>
+		<logger addititvity="false" name="PilotLogger">
+			<level value="ALL"/>
+			<appender-ref ref="PilotLogger"/>
+		</logger>
+
+	</log4net>
 </configuration>
