--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -19,6 +19,7 @@
     <None Remove="FontManagement\Fonts\lib\LSBSymbol.ttf" />
     <None Remove="LayoutInfo\Defaults\AdvancedImagesSlideLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\AnthemTitleLayoutInfo_Default.json" />
+    <None Remove="LayoutInfo\Defaults\ComplexShapeImageAndTextLayoutInfo_Default.json" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Green.lib.json" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Hymns.lib.json" />
     <None Remove="LayoutInfo\Defaults\LibBundles\Xenon.Purple.lib.json" />
@@ -61,6 +62,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="LayoutInfo\Defaults\AdvancedImagesSlideLayoutInfo_Default.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LayoutInfo\Defaults\ComplexShapeImageAndTextLayoutInfo_Default.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="LayoutInfo\Defaults\ShapeImageAndTextLayoutInfo_Default.json">
